# golem

./: LICENSE  README.md
backend/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/app/: .env.template  alembic.ini  config.py  main.py
backend/app/admin/: admin_base.py  group_admin.py  motif_admin.py  organism_admin.py  stage_preference_admin.py  usage_admin.py  user_admin.py
backend/app/admin/fields/: hex_color_field.py
backend/app/admin/templates/: usage_admin.html
backend/app/api/v1/: oauth2_cookie_scheme.py
backend/app/api/v1/middleware/: exception.py  user_loader.py
backend/app/api/v1/routes/: analytics.py  auth.py  motifs.py  organisms.py  preferences.py  ready.py  test.py
backend/app/api/v1/schemas/: auth.py  motif.py  organism.py  preference.py  response.py  usage_stats.py
backend/app/db/: alembic.ini  db.py  schema.puml  seed.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 58267e5fff86_init_users_and_groups.py  58c0f00904d9_rename_is_public_to_public.py  6b5470ab3b5a_add_motif_tables_take_first_transcript_.py  71834dfc5a17_make_user_stage_preference_per_organism.py  9f740ece1877_make_name_columns_unique.py  d8108a311ced_add_stage_preference_table.py  (+5 more)
backend/app/db/models/: group.py  motif.py  organism.py  stage_preference.py  user.py
backend/app/db/repositories/: motif.py  organism.py  preference.py  user.py
backend/app/db/seeds/: motif_seed.py  organism_seed.py  user_seed.py
backend/app/db/types/: color.py
backend/app/schemas/: base.py
backend/app/services/: auth.py
(+112 files in other folders)
