[project]
name = "golem-backend"
version = "0.1.0"
description = "GOLEM backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "biopython>=1.85",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.1",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.12.5",
    "sqlmodel>=0.0.24",
    "starlette-admin>=0.15.1",
]
